Tidying up processing notebook

--- a/A_processDataFakeReal.ipynb
+++ b/A_processDataFakeReal.ipynb
@@ -64,7 +64,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4a4dcea-5b79-49ae-b1ef-8be7df05de2c"
+        "outputId": "4b12e297-1c20-4c0d-a258-a6df14224b07"
       },
       "execution_count": 2,
       "outputs": [
@@ -72,7 +72,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Directory created.\n"
+            "Directory already there.\n"
           ]
         }
       ]
@@ -136,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUilfHpNitgJ",
-        "outputId": "3e8f9004-9f99-455a-9e07-b32693d40e2d"
+        "outputId": "330e22b6-e5c3-48a4-e48b-eac220249177"
       },
       "execution_count": 4,
       "outputs": [
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "5c2a6f04-74d5-4fee-e8e8-5c69d3f2be60"
+        "outputId": "f665a998-3db6-45bb-8f65-a90a0eae3f8c"
       },
       "execution_count": 5,
       "outputs": [
@@ -180,7 +180,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-83c4ba6e-d457-40ed-af99-fa564b0215ec\">\n",
+              "  <div id=\"df-f676ecb6-425f-449a-afb4-851bbf137f77\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -239,7 +239,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-83c4ba6e-d457-40ed-af99-fa564b0215ec')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f676ecb6-425f-449a-afb4-851bbf137f77')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -290,12 +290,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-83c4ba6e-d457-40ed-af99-fa564b0215ec button.colab-df-convert');\n",
+              "          document.querySelector('#df-f676ecb6-425f-449a-afb4-851bbf137f77 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-83c4ba6e-d457-40ed-af99-fa564b0215ec');\n",
+              "          const element = document.querySelector('#df-f676ecb6-425f-449a-afb4-851bbf137f77');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -334,7 +334,7 @@
           "height": 489
         },
         "id": "C8YCl2MeixzP",
-        "outputId": "1ab87252-5493-4736-da2a-c6b1a9c03be3"
+        "outputId": "87396356-31d8-456c-d4e5-fed82b8073cc"
       },
       "execution_count": 6,
       "outputs": [
@@ -360,7 +360,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9\">\n",
+              "  <div id=\"df-e53aad25-3617-4bcc-97f4-59ae60eca86d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -473,7 +473,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e53aad25-3617-4bcc-97f4-59ae60eca86d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -524,12 +524,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e53aad25-3617-4bcc-97f4-59ae60eca86d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-05bf0cb9-96d0-491f-8ea3-22e4c6e326c9');\n",
+              "          const element = document.querySelector('#df-e53aad25-3617-4bcc-97f4-59ae60eca86d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -560,7 +560,7 @@
       "cell_type": "code",
       "source": [
         "# NOTE: This chart will not show on GitHub.\n",
-        "# See Appendix below for more information.\n",
+        "# See the next cell for more information.\n",
         "\n",
         "articlesChart = alt.Chart(chartDF).mark_bar().encode(\n",
         "    x = alt.X('Number of Articles:Q'),\n",
@@ -576,7 +576,7 @@
           "height": 478
         },
         "id": "4Tff43zehsnu",
-        "outputId": "404d124a-8b6c-438f-f337-ef428c4e0f42"
+        "outputId": "75297c35-8f4d-4f81-be56-b7e0cde3eb81"
       },
       "execution_count": 7,
       "outputs": [
@@ -585,13 +585,13 @@
           "data": {
             "text/html": [
               "\n",
-              "<div id=\"altair-viz-e6ff7180eac64df29730f34d3d255655\"></div>\n",
+              "<div id=\"altair-viz-3d1dc9e617f44e6fb370db9baca1fb03\"></div>\n",
               "<script type=\"text/javascript\">\n",
               "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
               "  (function(spec, embedOpt){\n",
               "    let outputDiv = document.currentScript.previousElementSibling;\n",
-              "    if (outputDiv.id !== \"altair-viz-e6ff7180eac64df29730f34d3d255655\") {\n",
-              "      outputDiv = document.getElementById(\"altair-viz-e6ff7180eac64df29730f34d3d255655\");\n",
+              "    if (outputDiv.id !== \"altair-viz-3d1dc9e617f44e6fb370db9baca1fb03\") {\n",
+              "      outputDiv = document.getElementById(\"altair-viz-3d1dc9e617f44e6fb370db9baca1fb03\");\n",
               "    }\n",
               "    const paths = {\n",
               "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -652,9 +652,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Appendix: Altair images\n",
+        "###Altair images\n",
         "\n",
-        "Altair-generated charts don't show on GitHub. The reason is explained here: https://stackoverflow.com/questions/71346406/why-are-my-altair-data-visualizations-not-showing-up-in-github\n",
+        "Altair-generated images don't show on GitHub. The reason is explained here: https://stackoverflow.com/questions/71346406/why-are-my-altair-data-visualizations-not-showing-up-in-github\n",
         "\n",
         "So this cell contains a workaround for 'articlesChart' from above, embedding a PNG version of the chart into this Markdown cell. The method is explained here: https://medium.com/analytics-vidhya/embedding-your-image-in-google-colab-markdown-3998d5ac2684\n",
         "\n",
