Resolved image issue in modelling notebook

--- a/A_processDataFakeReal.ipynb
+++ b/A_processDataFakeReal.ipynb
@@ -64,7 +64,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b12e297-1c20-4c0d-a258-a6df14224b07"
+        "outputId": "d8547bb6-c03e-40ab-97f8-7705c1610535"
       },
       "execution_count": 2,
       "outputs": [
@@ -136,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AUilfHpNitgJ",
-        "outputId": "330e22b6-e5c3-48a4-e48b-eac220249177"
+        "outputId": "4a52adcb-3a02-476b-91f7-6d1065400b1f"
       },
       "execution_count": 4,
       "outputs": [
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "f665a998-3db6-45bb-8f65-a90a0eae3f8c"
+        "outputId": "5606d1de-d9c3-4be2-86f9-9f1c2ae5ff2d"
       },
       "execution_count": 5,
       "outputs": [
@@ -180,7 +180,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f676ecb6-425f-449a-afb4-851bbf137f77\">\n",
+              "  <div id=\"df-2f839080-e333-4b70-8722-9e7cad5ca0e2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -239,7 +239,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f676ecb6-425f-449a-afb4-851bbf137f77')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f839080-e333-4b70-8722-9e7cad5ca0e2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -290,12 +290,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f676ecb6-425f-449a-afb4-851bbf137f77 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2f839080-e333-4b70-8722-9e7cad5ca0e2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f676ecb6-425f-449a-afb4-851bbf137f77');\n",
+              "          const element = document.querySelector('#df-2f839080-e333-4b70-8722-9e7cad5ca0e2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -334,7 +334,7 @@
           "height": 489
         },
         "id": "C8YCl2MeixzP",
-        "outputId": "87396356-31d8-456c-d4e5-fed82b8073cc"
+        "outputId": "c1da1052-4365-4b4d-adae-9c2618af3629"
       },
       "execution_count": 6,
       "outputs": [
@@ -360,7 +360,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e53aad25-3617-4bcc-97f4-59ae60eca86d\">\n",
+              "  <div id=\"df-6ba40da0-d873-451e-98b6-cee249e47dae\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -473,7 +473,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e53aad25-3617-4bcc-97f4-59ae60eca86d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6ba40da0-d873-451e-98b6-cee249e47dae')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -524,12 +524,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e53aad25-3617-4bcc-97f4-59ae60eca86d button.colab-df-convert');\n",
+              "          document.querySelector('#df-6ba40da0-d873-451e-98b6-cee249e47dae button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e53aad25-3617-4bcc-97f4-59ae60eca86d');\n",
+              "          const element = document.querySelector('#df-6ba40da0-d873-451e-98b6-cee249e47dae');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -568,86 +568,13 @@
         "    color = alt.Color('Label:N'),\n",
         "    row = alt.Row('Domain:N')\n",
         "    )\n",
-        "articlesChart"
+        "#articlesChart"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 478
-        },
-        "id": "4Tff43zehsnu",
-        "outputId": "75297c35-8f4d-4f81-be56-b7e0cde3eb81"
+        "id": "4Tff43zehsnu"
       },
       "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "<div id=\"altair-viz-3d1dc9e617f44e6fb370db9baca1fb03\"></div>\n",
-              "<script type=\"text/javascript\">\n",
-              "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
-              "  (function(spec, embedOpt){\n",
-              "    let outputDiv = document.currentScript.previousElementSibling;\n",
-              "    if (outputDiv.id !== \"altair-viz-3d1dc9e617f44e6fb370db9baca1fb03\") {\n",
-              "      outputDiv = document.getElementById(\"altair-viz-3d1dc9e617f44e6fb370db9baca1fb03\");\n",
-              "    }\n",
-              "    const paths = {\n",
-              "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
-              "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
-              "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
-              "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
-              "    };\n",
-              "\n",
-              "    function maybeLoadScript(lib, version) {\n",
-              "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
-              "      return (VEGA_DEBUG[key] == version) ?\n",
-              "        Promise.resolve(paths[lib]) :\n",
-              "        new Promise(function(resolve, reject) {\n",
-              "          var s = document.createElement('script');\n",
-              "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-              "          s.async = true;\n",
-              "          s.onload = () => {\n",
-              "            VEGA_DEBUG[key] = version;\n",
-              "            return resolve(paths[lib]);\n",
-              "          };\n",
-              "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-              "          s.src = paths[lib];\n",
-              "        });\n",
-              "    }\n",
-              "\n",
-              "    function showError(err) {\n",
-              "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
-              "      throw err;\n",
-              "    }\n",
-              "\n",
-              "    function displayChart(vegaEmbed) {\n",
-              "      vegaEmbed(outputDiv, spec, embedOpt)\n",
-              "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
-              "    }\n",
-              "\n",
-              "    if(typeof define === \"function\" && define.amd) {\n",
-              "      requirejs.config({paths});\n",
-              "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-              "    } else {\n",
-              "      maybeLoadScript(\"vega\", \"5\")\n",
-              "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
-              "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
-              "        .catch(showError)\n",
-              "        .then(() => displayChart(vegaEmbed));\n",
-              "    }\n",
-              "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-84f187a9a323c6773f7ea40ffa837eb7\"}, \"mark\": \"bar\", \"encoding\": {\"color\": {\"field\": \"Label\", \"type\": \"nominal\"}, \"row\": {\"field\": \"Domain\", \"type\": \"nominal\"}, \"x\": {\"field\": \"Number of Articles\", \"type\": \"quantitative\"}, \"y\": {\"axis\": {\"labels\": false, \"tickSize\": 0}, \"field\": \"Label\", \"title\": null, \"type\": \"nominal\"}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-84f187a9a323c6773f7ea40ffa837eb7\": [{\"Domain\": \"biz\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"biz\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"celebrity\", \"Label\": \"fake\", \"Number of Articles\": 250}, {\"Domain\": \"celebrity\", \"Label\": \"legit\", \"Number of Articles\": 250}, {\"Domain\": \"edu\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"edu\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"entmt\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"entmt\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"polit\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"polit\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"sports\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"sports\", \"Label\": \"legit\", \"Number of Articles\": 40}, {\"Domain\": \"tech\", \"Label\": \"fake\", \"Number of Articles\": 40}, {\"Domain\": \"tech\", \"Label\": \"legit\", \"Number of Articles\": 40}]}}, {\"mode\": \"vega-lite\"});\n",
-              "</script>"
-            ],
-            "text/plain": [
-              "alt.Chart(...)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
